--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
   <p class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">VisheshShokeen</a>.
+    Coded by <a href="https://github.com/Vishesh-Shokeen">VisheshShokeen</a>.
   </p> 
 </body>
 
